--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
 
 /*====  LAYOUT ============================ */
 .container {
-  margin-left: 1.5rem;
+  margin-left: 1.5rem;  
   margin-right: 1.5rem;
 }
 
@@ -145,7 +145,7 @@ body {
 
 /*====  LOGO ============================ */
 .logo {
-  font: 700 1.31rem var(--title-font);
+  font: 700 2rem var(--title-font);
   color: var(--title-color);
 }
 
@@ -307,6 +307,7 @@ nav.show div.icon-cancel_close_delete_exit_logout_icon1 {
   margin-bottom: 2rem;
 }
 
+
 /*==== ABOUT =========================== */
 #about {
   background: white;
@@ -343,6 +344,15 @@ nav.show div.icon-cancel_close_delete_exit_logout_icon1 {
 #about .text {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+
+.paragraph { 
+  font-size: 1.2rem;
+}
+
+.paragraph-c {
+  text-align: center;
+  font-size: 1.2rem;
 }
 
 /*==== SERVICES =========================== */
@@ -384,6 +394,15 @@ nav.show div.icon-cancel_close_delete_exit_logout_icon1 {
   margin-bottom: 0.75rem;
 }
 
+.img-cards { 
+  width: 20%;
+}
+
+.li-cards{
+  text-align: center;
+  padding: 10px;
+}
+
 /* swiper */
 .swiper-slide {
   height: auto;
@@ -398,6 +417,15 @@ nav.show div.icon-cancel_close_delete_exit_logout_icon1 {
 .swiper-pagination-bullet-active {
   background: var(--base-color);
 }
+
+.subtitle { 
+  font-size:1.2rem !important;
+}
+
+.subtitle-cards{
+  font-size: 1rem;
+}
+
 
 /*==== CONTACT =========================== */
 #contact .grid {
