--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ nav.show div.icon-cancel_close_delete_exit_logout_icon1 {
 #about .image::before {
   content: '';
   height: 100%;
-  width: 100%;
+  width: 115%;
   background: var(--base-color-second);
   position: absolute;
   top: -20%;
@@ -611,6 +611,12 @@ footer .social a:hover {
     grid-auto-flow: column;
   }
 
+  #about .image img {
+  position: relative;
+  width: 95%;
+  left: 1rem;
+}
+
   /* services */
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
@@ -653,5 +659,10 @@ footer .social a:hover {
     --title-font-size: 2.25rem;
     --subtitle-font-size: 1.125rem;
   }
+  #about .image img {
+  position: relative;
+  width: 95%;
+  left: 1rem;
+}
 }
 /* medium devices: 767 > */
